--- a/Session8ex5.html
+++ b/Session8ex5.html
@@ -24,7 +24,7 @@
                 <ion-icon name="logo-instagram"></ion-icon>
             </p>
             <p>
-                © Untitled. Credits: <span style="border-bottom: 1px dashed black;">HTML5 UP + Unsplash</span>
+                © Untitled. Credits: <span style="text-decoration: underline dotted;">HTML5 UP + Unsplash</span>
             </p>
         </div>
     </div>
